# obs-studio

UI/: audio-encoders.cpp  obs-app.cpp  window-basic-main-outputs.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp
UI/data/locale/: af-ZA.ini  an-ES.ini  ar-SA.ini  az-AZ.ini  ba-RU.ini  be-BY.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-GB.ini  en-US.ini  eo-UY.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kaa.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  lt-LT.ini  lv-LV.ini  (+28 more)
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui
cmake/Modules/: CopyMSVCBins.cmake
cmake/common/: versionconfig.cmake
cmake/windows/: defaults.cmake  helpers.cmake
libobs/: obs-output.c  obs-output.h  obs.h
plugins/: CMakeLists.txt
plugins/obs-alirtc/: CMakeLists.txt  alirtc_common.cpp  alirtc_common.h  alirtc_encoder.cpp  alirtc_encoder.h  alirtc_output.cpp  alirtc_output.h  alirtc_service.cpp  alirtc_service.h  obs-alirtc.cpp
plugins/obs-alirtc/cmake/: legacy.cmake
plugins/obs-alirtc/cmake/windows/: obs-module.rc.in
plugins/obs-alirtc/data/locale/: af-ZA.ini  be-BY.ini  bg-BG.ini  ca-ES.ini  cs-CZ.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  et-EE.ini  fa-IR.ini  fi-FI.ini  fr-FR.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kaa.ini  ko-KR.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ru-RU.ini  si-LK.ini  sk-SK.ini  sl-SI.ini  sv-SE.ini  tr-TR.ini  ug-CN.ini  uk-UA.ini  vi-VN.ini  zh-CN.ini  (+1 more)
plugins/obs-alirtc/libs/include/: alivc_live_define.h  alivc_live_listener.h  alivc_live_utils.h
plugins/obs-alirtc/libs/include/player/: alivc_live_player.h
plugins/obs-alirtc/libs/include/pusher/: alivc_live_base.h  alivc_live_pusher.h
plugins/obs-alirtc/libs/x64/Debug/: AliRTCSdk.lib
plugins/obs-alirtc/libs/x64/Release/: AliRTCSdk.lib
plugins/obs-outputs/: CMakeLists.txt
plugins/rtmp-services/data/schema/: service-schema-v5.json
plugins/win-capture/: CMakeLists.txt  game-capture.c
plugins/win-capture/get-graphics-offsets/: CMakeLists.txt
plugins/win-capture/graphics-hook/: CMakeLists.txt
plugins/win-capture/graphics-hook/cmake/: 32bit-build.cmake  legacy.cmake
plugins/win-capture/inject-helper/: CMakeLists.txt
plugins/win-dshow/: CMakeLists.txt
plugins/win-dshow/virtualcam-module/: CMakeLists.txt
